braid/braid_status.h

/**
 * This is the main Status structure, that contains the properties of all the status.
 * The user does not have access to this structure, but only to the derived Status
 * structures. This class is accessed only inside XBraid code.
 */
typedef struct _braid_Status_struct *braid_Status;
/** @}*/


/*--------------------------------------------------------------------------
 * Routines for user to access XBraid status structures
 *--------------------------------------------------------------------------*/

/** \defgroup braidstatusroutines XBraid status routines
 *  \ingroup userinterface
 *  
 *  XBraid status structures and associated Get/Set routines are what tell 
 *  the user the status of the simulation  when their routines (step, 
 *  coarsen/refine, access) are called. 
 *
 *  @{
 */

/*--------------------------------------------------------------------------
 * Global Status Prototypes
 *--------------------------------------------------------------------------*/

/**
 * Return the current time from the Status structure.
 **/
braid_Int
braid_StatusGetT(braid_Status status,                      /**< structure containing current simulation info */
                 braid_Real  *t_ptr                        /**< output, current time */
                 );
/** Return the index value corresponding to the current time value from the
 * Status structure.  
 *
 * For Step(), this corresponds to the time-index of "tstart", as this is the
 * time-index of the input vector.  That is, NOT the time-index of "tstop".
 * For Access, this corresponds just simply to the time-index of the input
 * vector.
 **/
braid_Int
braid_StatusGetTIndex(braid_Status status,                  /**< structure containing current simulation info */
                      braid_Int   *idx_ptr                  /**< output, global index value corresponding to current time value */
                      );
/**
 * Return the current iteration from the Status structure.
 **/
braid_Int
braid_StatusGetIter(braid_Status status,                   /**< structure containing current simulation info */
                    braid_Int   *iter_ptr                  /**< output, current XBraid iteration number*/
                    );
/**
 * Return the current XBraid level from the Status structure.
 **/
braid_Int
braid_StatusGetLevel(braid_Status status,                  /**< structure containing current simulation info */
                     braid_Int   *level_ptr                /**< output, current level in XBraid */
                     );
/**
 * Return the total number of XBraid levels from the Status structure.
 **/
braid_Int
braid_StatusGetNLevels(braid_Status status,                  /**< structure containing current simulation info */
                       braid_Int   *nlevels_ptr              /**< output, number of levels in XBraid */
                       );
/**
 * Return the number of refinements done.
 **/
braid_Int
braid_StatusGetNRefine(braid_Status status,                /**< structure containing current simulation info */
                       braid_Int   *nrefine_ptr            /**< output, number of refinements done */
                       );
/**
 * Return the global number of time points on the fine grid.
 **/
braid_Int
braid_StatusGetNTPoints(braid_Status status,               /**< structure containing current simulation info */
                        braid_Int   *ntpoints_ptr          /**< output, number of time points on the fine grid */
                        );
/**
 * Return the current residual norm from the Status structure.
 **/
braid_Int
braid_StatusGetResidual(braid_Status status,               /**< structure containing current simulation info */
                        braid_Real  *rnorm_ptr             /**< output, current residual norm */
                        );
/**
 * Return whether XBraid is done for the current simulation.
 *
 * *done_ptr = 1* indicates that XBraid has finished iterating, 
 * (either maxiter has been reached, or the tolerance has been met).
 **/
braid_Int
braid_StatusGetDone(braid_Status status,                   /**< structure containing current simulation info */
                    braid_Int   *done_ptr                  /**< output,  =1 if XBraid has finished, else =0 */
                    );
/**
 * Returns upper and lower time point indices on this processor. Two
 * values are returned. Requires the user to specify which level they
 * want the time point indices from.
 **/
braid_Int
braid_StatusGetTIUL(braid_Status status,                   /**< structure containing current simulation info */
                    braid_Int   *iloc_upper,               /**< output, the upper time point index on this processor */
                    braid_Int   *iloc_lower,               /**< output, the lower time point index on this processor */
                    braid_Int    level                     /**< input, level for the desired indices */
                    );
/**
 * Return XBraid status for the current simulation. Four values are 
 * returned.
 *
 * TILD : time, iteration, level, done
 *
 * These values are also available through individual Get routines. 
 * These individual routines are the location of detailed documentation on 
 * each parameter, e.g., see *braid_StatusGetDone* for more information
 * on the *done* value.
 **/
braid_Int
braid_StatusGetTILD(braid_Status status,                   /**< structure containing current simulation info */
                    braid_Real  *t_ptr,                    /**< output, current time */
                    braid_Int   *iter_ptr,                 /**< output, current XBraid iteration number*/
                    braid_Int   *level_ptr,                /**< output, current level in XBraid */
                    braid_Int   *done_ptr                  /**< output,  =1 if XBraid has finished, else =0 */
                    );
/**
 * Return whether this is a wrapper test or an XBraid run
 **/
braid_Int
braid_StatusGetWrapperTest(braid_Status status,            /**< structure containing current simulation info */
                           braid_Int   *wtest_ptr          /**< output, =1 if this is a wrapper test, =0 if XBraid run */
                           );
/**
 * Return flag indicating from which function the vector is accessed
 **/
braid_Int
braid_StatusGetCallingFunction(braid_Status status,        /**< structure containing current simulation info */
                               braid_Int   *cfunction_ptr  /**< output, function number (0=FInterp, 1=FRestrict, 2=FRefine, 3=FAccess, 4=FRefine after refinement, 5=Drive Top of Cycle) */
                               );
/**
 * Return the current rank of Delta correction being used
 */
braid_Int
braid_StatusGetDeltaRank(braid_Status status,   /**< structure containing current simulation info */
                         braid_Int   *rank_ptr  /**< output, rank of Delta correction, number of tracked basis vectors */
                         );
/**
 * Return a reference to the basis vector at the current time value and given spatial index
 */
braid_Int
braid_StatusGetBasisVec(braid_Status  status,  /**< structure containing current simulation info */
                        braid_Vector *v_ptr,   /**< output, reference to basis vector */
                        braid_Int     index    /**< input, spatial index (column) of desired basis vector */
                        );
/**
 * Return a reference to an array of local exponents, with each exponent *j* corresponding to the total growth over the previous C-interval
 * in the direction of the *j*th Lyapunov exponent (These are only available after the final FCRelax)
 */
braid_Int
braid_StatusGetLocalLyapExponents(braid_Status   status,       /**< structure containing the current simulation info */
                                  braid_Real    *exp_ptr,      /**< output, reference to array containing (num_returned) exponents */
                                  braid_Int     *num_returned  /**< output, number of exponents contained in exp_ptr */
                                  );
/**
 * Return the current XBraid stopping tolerance
 **/
braid_Int
braid_StatusGetTol(braid_Status status,                    /**< structure containing current simulation info */
                   braid_Real  *tol_ptr                    /**< output, current XBraid stopping tolerance */
                   );
/**
 * Return the current XBraid residual history.  If *nrequest_ptr*
 * is negative, return the last *nrequest_ptr* residual norms.  If
 * positive, return the first *nrequest_ptr* residual norms.  Upon
 * exit, *nrequest_ptr* holds the number of residuals actually
 * returned.
 **/
braid_Int
braid_StatusGetRNorms(braid_Status status,                 /**< structure containing current simulation info */
                      braid_Int   *nrequest_ptr,           /**< input/output, input: number of requested residual norms, output: number actually copied */
                      braid_Real  *rnorms_ptr              /**< output, XBraid residual norm history, of length *nrequest_ptr* */
                      );
/**
 * Returns the processor number in *proc_ptr* on which the time step *index*
 * lives for the given *level*.  Returns -1 if *index* is out of range.
 * This is used especially by the _braid_SyncStatus functionality
 **/
braid_Int
braid_StatusGetProc(braid_Status  status,                  /**< structure containing current simulation info */
                    braid_Int    *proc_ptr,                /**< output, the processor number corresponding to the level and time point index inputs */
                    braid_Int     level,                   /**< input, level for the desired processor */
                    braid_Int     index                    /**< input, the global time point index for the desired processor */
                    );
/**
 * Set the rfactor, a desired refinement factor for this interval.  rfactor=1
 * indicates no refinement, otherwise, this inteval is subdivided rfactor
 * times (uniform refinement).
 **/
braid_Int
braid_StatusSetRFactor(braid_Status status,                /**< structure containing current simulation info */
                       braid_Real   rfactor                /**< input, user-determined desired rfactor */
                       );
/**
 * Gets accces to the temporal communicator. Allows this processor
 * to access other temporal processors.
 * This is used especially by Sync.
 **/
braid_Int
braid_StatusGetTComm(braid_Status  status,            /**< structure containing current simulation info */
                     MPI_Comm     *comm_ptr           /**< output, temporal communicator */
                     );